final development of the lab

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -17,9 +17,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0896e1dc",
+   "id": "cca5191d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "%pip install numpy matplotlib pandas torch scikit-learn tiktoken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0896e1dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I HAD always thought Jack Gisburn rather a cheap genius--though a good fellow enough--so it was no great surprise to me to hear that, in the height of his glory, he had dropped his painting, married a rich widow, and established himself in a villa on the Riviera. (Though I rather thought it would have been Rome or Florence.)\n",
+      "\n",
+      "\"The height of his glory\"--that was what the women called it. I can hear Mrs. Gideon Thwing--his last Chicago sitter--deploring his unaccountable abdication. \"Of course it'\n",
+      "\n",
+      "Total de caracteres: 20479\n"
+     ]
+    }
+   ],
    "source": [
     "# Cargar el texto fuente\n",
     "with open(\"the-verdict.txt\", \"r\", encoding=\"utf-8\") as f:\n",
@@ -42,10 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7e2d3334",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primeros 50 tokens:\n",
+      "['I', 'HAD', 'always', 'thought', 'Jack', 'Gisburn', 'rather', 'a', 'cheap', 'genius', '-', '-', 'though', 'a', 'good', 'fellow', 'enough', '-', '-', 'so', 'it', 'was', 'no', 'great', 'surprise', 'to', 'me', 'to', 'hear', 'that', ',', 'in', 'the', 'height', 'of', 'his', 'glory', ',', 'he', 'had', 'dropped', 'his', 'painting', ',', 'married', 'a', 'rich', 'widow', ',', 'and']\n",
+      "\n",
+      "Número total de tokens: 4827\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -75,10 +108,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7badd94e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamaño del vocabulario: 1148\n",
+      "Ejemplo de mapeo token -> id:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('!', 0),\n",
+       " ('\"', 1),\n",
+       " (\"'\", 2),\n",
+       " ('(', 3),\n",
+       " (')', 4),\n",
+       " (',', 5),\n",
+       " ('-', 6),\n",
+       " ('.', 7),\n",
+       " (':', 8),\n",
+       " (';', 9)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Construcción del vocabulario\n",
     "vocab = sorted(set(tokens))\n",
@@ -105,10 +166,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dcf468a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokens codificados (primeros 20):\n",
+      "[53, 44, 163, 1021, 57, 38, 835, 129, 271, 504, 6, 6, 1020, 129, 518, 452, 410, 6, 6, 925]\n",
+      "\n",
+      "Decodificación de prueba:\n",
+      "['I', 'HAD', 'always', 'thought', 'Jack', 'Gisburn', 'rather', 'a', 'cheap', 'genius', '-', '-', 'though', 'a', 'good', 'fellow', 'enough', '-', '-', 'so']\n"
+     ]
+    }
+   ],
    "source": [
     "def encode(token_list):\n",
     "    return [token_to_id[token] for token in token_list]\n",
@@ -138,10 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f470747c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primeros 50 tokens BPE:\n",
+      "[40, 367, 2885, 1464, 1807, 3619, 402, 271, 10899, 2138, 257, 7026, 15632, 438, 2016, 257, 922, 5891, 1576, 438, 568, 340, 373, 645, 1049, 5975, 284, 502, 284, 3285, 326, 11, 287, 262, 6001, 286, 465, 13476, 11, 339, 550, 5710, 465, 12036, 11, 6405, 257, 5527, 27075, 11]\n",
+      "\n",
+      "Número total de tokens BPE: 5145\n"
+     ]
+    }
+   ],
    "source": [
     "import tiktoken\n",
     "\n",
@@ -172,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c05cd1f1",
    "metadata": {},
    "outputs": [],
@@ -197,10 +281,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "00bcc780",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de samples sin solapamiento: 643\n"
+     ]
+    }
+   ],
    "source": [
     "# Experimento sin solapamiento\n",
     "max_length = 8\n",
@@ -212,10 +304,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1e0ad86b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de samples con solapamiento: 1285\n"
+     ]
+    }
+   ],
    "source": [
     "# Experimento con solapamiento\n",
     "max_length = 8\n",
@@ -291,7 +391,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.14.0"
   }
  },
